force-app/main/default/objects/SecurityInboundAction__mdt/SecurityInboundAction__mdt.object-meta.xml
<CustomObject>
    <description>인바운드 요청의 action 파라미터 → ISecurityAction 구현체 매핑. SecurityIntegration__mdt와 분리(아웃바운드 전용).</description>
    <label>Security Inbound Action</label>
</CustomObject>