force-app/main/default/objects/SecurityInboundAction__mdt/fields/ActionClassName__c.field-meta.xml
<CustomField>
    <fullName>ActionClassName__c</fullName>
    <description>실행할 ISecurityAction 구현 클래스명 (예: SecurityKillSessionAction)</description>
    <label>Action Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>