force-app/main/default/objects/SecurityInboundAction__mdt/fields/ExecutionMode__c.field-meta.xml
<CustomField>
    <fullName>ExecutionMode__c</fullName>
    <description>실행 모드 (SYNC 또는 ASYNC). SecurityActionFactory에서 이 액션을 동기/비동기로 돌릴지 결정합니다.</description>
    <label>Execution Mode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>