force-app/main/default/objects/SecurityInboundAction__mdt/fields/InboundActionType__c.field-meta.xml
<CustomField>
    <fullName>InboundActionType__c</fullName>
    <description>인바운드 URL/body의 action 파라미터 값 (예: KILL_SESSION)</description>
    <label>Inbound Action Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>