force-app/main/default/objects/SecurityInboundAction__mdt/fields/RequiresToken__c.field-meta.xml
<CustomField>
    <fullName>RequiresToken__c</fullName>
    <defaultValue>false</defaultValue>
    <description>true면 서명 토큰+만료시간(t) 검증 필수. 팀즈 링크 클릭 등에 사용.</description>
    <label>Requires Token</label>
    <type>Checkbox</type>
</CustomField>